--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mesto-project",
+  "name": "mesto",
   "version": "1.0.0",
   "description": "\"\"\u001b[Dlearning project\"",
   "main": "index.js",
