--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "webpack --mode production",
     "dev": "webpack serve",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "npm run build && scp -Cr ./dist/* catman@158.160.16.204:/home/catman/mesto-frontend"
   },
   "repository": {
     "type": "git",
